--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
   "name": "wagmore",
   "version": "1.0.0",
   "dependencies": {
+    "mobx": "^3.3.1",
+    "mobx-react": "^4.3.4",
     "next": "^4.1.4",
     "react": "^16.0.0",
     "react-bootstrap": "^0.31.5",
     "react-dom": "^16.0.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "babel-plugin-transform-decorators-legacy": "^1.3.4"
+  },
   "author": "Ryan Maas",
   "license": "Copyright Ryan Maas 2017 - All Rights Reserved",
   "description": "Homework for Rover.com interview"
