--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "name": "wagmore",
   "version": "1.0.0",
   "dependencies": {
+    "isomorphic-fetch": "^2.2.1",
     "mobx": "^3.3.1",
     "mobx-react": "^4.3.4",
     "next": "^4.1.4",
