--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "styleguide": "styleguidist server",
+    "styleguide:build": "styleguidist build"
   },
   "name": "wagmore",
   "version": "1.0.0",
   "dependencies": {
+    "babel-plugin-inline-import": "^2.0.6",
+    "bootstrap": "^3.3.7",
     "isomorphic-fetch": "^2.2.1",
     "mobx": "^3.3.1",
     "mobx-react": "^4.3.4",
@@ -16,7 +20,15 @@
     "react-dom": "^16.0.0"
   },
   "devDependencies": {
-    "babel-plugin-transform-decorators-legacy": "^1.3.4"
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "file-loader": "^1.1.5",
+    "prettier-eslint": "^8.2.1",
+    "react-styleguidist": "^6.0.33",
+    "url-loader": "^0.6.2",
+    "webpack": "^3.8.1"
   },
   "author": "Ryan Maas",
   "license": "Copyright Ryan Maas 2017 - All Rights Reserved",
