--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,5 @@
 {
-  "presets": [
-    "next/babel"
-  ],
-  "plugins": [
-    "transform-decorators-legacy"
-  ],
+  "presets": ["next/babel", "es2015", "react"],
+  "plugins": ["transform-decorators-legacy"],
   "ignore": []
 }
