--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "build": "next build",
     "start": "next start",
     "styleguide": "styleguidist server",
-    "styleguide:build": "styleguidist build"
+    "styleguide:build": "styleguidist build",
+    "test": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "name": "wagmore",
   "version": "1.0.0",
@@ -20,13 +22,20 @@
     "react-dom": "^16.0.0"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-jest": "^21.2.0",
+    "babel-loader": "^7.1.2",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "enzyme": "^3.1.1",
+    "enzyme-adapter-react-16": "^1.0.4",
     "file-loader": "^1.1.5",
+    "jest": "^21.2.1",
     "prettier-eslint": "^8.2.1",
     "react-styleguidist": "^6.0.33",
+    "regenerator-runtime": "^0.11.0",
     "url-loader": "^0.6.2",
     "webpack": "^3.8.1"
   },
