--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-  "presets": ["next/babel", "es2015", "react"],
+  "presets": ["es2015", "react", "next/babel"],
   "plugins": ["transform-decorators-legacy"],
   "ignore": []
 }
