--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "isomorphic-fetch": "^2.2.1",
     "mobx": "^3.3.1",
     "mobx-react": "^4.3.4",
+    "moment": "^2.19.1",
     "next": "^4.1.4",
     "react": "^16.0.0",
     "react-bootstrap": "^0.31.5",
